--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(scmi source/main.cpp
     source/tokens.cpp
-    source/ast.h)
+    source/ast.h
+        source/compiler.hpp)
 
 add_subdirectory(source)
