added compiler->addLocalVariable-> numberDeclaration + identifierDeclaration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(scmi source/main.cpp
     source/tokens.cpp
     source/ast.h
-        source/compiler.hpp)
+        source/compiler.hpp
+        source/compiler.cpp)
 
 add_subdirectory(source)
